--- a/src/style/Info.css
+++ b/src/style/Info.css
@@ -4,18 +4,21 @@
     grid-template-columns: 1fr 1fr;
     letter-spacing: 1px;
     place-content: center;
-    color: black;
+    color: white;
+    margin: 2rem auto;
 }
 
 #infoImg {
     margin: 0;
     height: auto;
-    max-width: 100%;
+    width: 100%;
     display: block;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.imgContainer {
+#imgContainer {
     min-height: 399px;
+    padding: 2rem;
 }
 
 #visjon {
@@ -23,18 +26,20 @@
     padding: 4rem;
     margin: auto;
     width: 100%;
-    height: 100%;
     font-size: 1.1rem;
     background-color: #0c0c0c;
-    color: white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
-/* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     #infoGrid {
         grid-template-columns: auto;
         width: 100%;
+        margin: 0;
+    }
+
+    #imgContainer {
+        padding: 0;
     }
 
     #visjon {
